@@ -1,3 +1,10 @@
+2003-03-21  Joe Shaw  <joe@ximian.com>
+
+	* soup-server.c: Use non-deprecated g_main_loop_* calls
+	throughout.
+	(soup_server_unref): Don't unref the main loop if it's NULL.
+	Fixes a glib warning.
+
 2003-03-18  Dan Winship  <danw@ximian.com>
 
 	* configure.in: comment out NSS checks. The NSS code doesn't work
